@@ -7,7 +7,11 @@ Version 6.4.22
   - PythonHelper produces working python code (fixed output of variables
     and dictionaries)
   - consistency over datatype IDs: switched CDateTime and CBool,
-    to make ist consistent with class datatype.  
+    to make ist consistent with class datatype.
+  - fixed CAssocArray export and import:
+    - CWideString is converted to UTF-8 and not system encoding
+    - CDateTime is exported correctly
+    - added unittests
   
 Version 6.4.21 vom 29.07.2018	(Repo-Tag: REL_6_4_21)
   - IdentAudioFile unterstützt nun Wave-Dateien
